[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/PlayerController.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1585, 31.7884 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionBox"]
modulate = Color( 0.184314, 0.721569, 0.0117647, 1 )
texture = ExtResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 20.0

[node name="slidingTimer" type="Timer" parent="."]
one_shot = true

[node name="dashTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="slidingTimer" to="." method="_on_slidingTimer_timeout"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dashTimer_timeout"]
